--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,7 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+    --background: oklch(0.98 0.01 240);
   --foreground: oklch(0.129 0.042 264.695);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.129 0.042 264.695);
@@ -117,4 +117,11 @@
   body {
     @apply bg-background text-foreground;
   }
+
+    .glassmorphism-box {
+        @apply rounded-xl border border-white/20 bg-white/70 shadow-lg;
+        /* Efekt matowego szkła */
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+    }
 }
