--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,7 +116,7 @@
     }
 
     body {
-        @apply bg-background text-foreground;
+        @apply text-foreground;
     }
 
     .glassmorphism-box {
